Add new reference for 'Titans: Learning to Memorize'

--- a/refs/references.bib
+++ b/refs/references.bib
@@ -1,3 +1,15 @@
+@misc{behrouz2024titans,
+  title         = {Titans: Learning to Memorize at Test Time},
+  author        = {Behrouz, Ali and Zhong, Peilin and Mirrokni, Vahab},
+  year          = {2024},
+  eprint        = {2501.00663},
+  archivePrefix = {arXiv},
+  primaryClass  = {cs.LG},
+  doi           = {10.48550/arXiv.2501.00663},
+  url           = {https://arxiv.org/abs/2501.00663}
+}
+
+
 @article{mnih2015dqn,
   title={Human-level control through deep reinforcement learning},
   author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and others},
