Add references for Schmidhuber and Behrouz articles
Added two article references to the bibliography.

--- a/refs/references.bib
+++ b/refs/references.bib
@@ -1,4 +1,17 @@
-@misc{behrouz2024titans,
+@article{schmidhuber2015learning,
+  title         = {On Learning to Think: Algorithmic Information Theory for Novel Combinations of Reinforcement Learning Controllers and Recurrent Neural World Models},
+  author        = {Schmidhuber, Juergen},
+  year          = {2015},
+  month         = nov,
+  eprint        = {1511.09249},
+  archivePrefix = {arXiv},
+  primaryClass  = {cs.AI},
+  doi           = {10.48550/arXiv.1511.09249},
+  url           = {https://arxiv.org/abs/1511.09249},
+  note          = {Submitted on 30 Nov 2015}
+}
+
+@article{behrouz2024titans,
   title         = {Titans: Learning to Memorize at Test Time},
   author        = {Behrouz, Ali and Zhong, Peilin and Mirrokni, Vahab},
   year          = {2024},
