Add online reference for Jürgen Schmidhuber
Added a new online reference for Jürgen Schmidhuber's homepage.

--- a/refs/references.bib
+++ b/refs/references.bib
@@ -8,6 +8,15 @@
   annote        = {Seminal modern world-model paper: learn latent dynamics (VAE + RNN) and train policies using model features or entirely “in imagination,” influencing a large wave of model-based RL.}
 }
 
+@online{JURGENSCHMIDHUBERHOMEPAGE,
+  title  = {JÜRGEN SCHMIDHUBER'S HOME PAGE},
+  author = {SCHMIDHUBER, JÜRGEN},
+  year   = {2024},
+  month  = jun,
+  url    = {https://people.idsia.ch/~juergen/},
+  annote = {JÜRGEN's home page that has collection of his and his team's work.}
+}
+
 @misc{worldmodels2018interactive,
   title  = {World Models (Interactive Project Page)},
   author = {Ha, David and Schmidhuber, J{\"u}rgen},
