Add reference for Kingma and Welling's paper on VAEs

--- a/refs/references.bib
+++ b/refs/references.bib
@@ -419,3 +419,13 @@
   url    = {https://github.com/yingchengyang/Reinforcement-Learning-Papers},
   annote = {Another community-maintained GitHub list covering classic and recent RL research across model-free and model-based areas.}
 }
+
+
+@online{kingma_max_IVA,
+  title  = {An Introduction to Varitional Autoencoders},
+  author = {Kingma, Diederik P. and Welling, Max},
+  year   = {2019},
+  month = {Dec},
+  url    = {https://arxiv.org/pdf/1906.02691},
+  annote = {Variational autoencoders provide a principled framework for learning deep latent-variable models and corresponding inference models. In this work, we provide an introduction to variational autoencoders and some important extensions.}
+}
